# Orbital_tech_challenge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: titanic.csv
src/: main.py
src/agent/: agent.py  context.py  prompt.py
src/agent/tools/: query_data.py  visualize.py
src/exceptions/session/: session_not_found_exception.py
src/routes/: dataset_routes.py  session_routes.py
src/schemas/dataset_schemas/: dataset_response_model.py
src/schemas/session_schemas/: ask_query.py  ask_response_model.py  session_response.py  tool_calls.py
src/services/: dataset_service.py  session_service.py
src/usecases/: chat_usecase.py
src/usecases/infrastructure/: plotly_extractor.py  thinking_stream_parser.py
tests/: conftest.py
tests/routes/dataset_routes/: list_datasets_route_test.py
tests/routes/session_routes/: ask_route_test.py  chat_websocket_route_test.py  create_session_route_test.py  delete_session_route_test.py
tests/services/: dataset_service_test.py  session_service_test.py
tests/usecases/: chat_usecase_test.py
tests/usecases/infrastructure/: ploty_extractor_test.py  thinking_stream_parser.py
